--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "jwt-simple": "^0.5.6",
     "mongoose": "^8.1.1",
     "node-cron": "^3.0.3",
